k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aimoneyweb-svc
  namespace: aimoney
spec:
  selector:
    app: aimoneyweb
  ports:
  - name: http
    port: 80
    targetPort: 8000
  type: ClusterIP
